--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -31,8 +31,17 @@
     "import scalpdemo   \n",
     "import ubergauss.tools as ut\n",
     "from lmz import *\n",
-    "import functools "
+    "import functools \n",
+    "!date"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddecb6e8-3f43-444d-9e31-458db1134c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -73,7 +82,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "datasets, dataset = scalpdemo.get_data(config = 2)\n",
+    "datasets, dataset = scalpdemo.get_data(config = 2)# config 2 is the correct value here! , 0 is the debug mode\n",
     "\n"
    ]
   },
@@ -199,9 +208,11 @@
     "\n",
     "if plot == '4':\n",
     "        stax = [ Scalp(dataset.copy(), ot= e/100 ) for e in [10,40, 70, 90] ]\n",
-    "        fig = scalp.plot4_2x2(stax, label = 'label', headline = 'Threshold -- Labels', plotnames = 'ABCD', colors = 1)\n",
+    "        # fig = scalp.plot4_2x2(stax, label = 'label', headline = 'Threshold -- Labels', plotnames = 'ABCD', clors = 1)\n",
+    "        fig = scalp.plot4_2x2(stax, headline = 'Threshold -- Labels', plotnames = 'ABCD', mode = 'label', n = 5 )\n",
     "        fig.savefig(figpath+'threshEx.png', dpi=300,bbox_inches='tight')\n",
-    "        fig = scalp.plot4_2x2(stax, label = 'batch', headline = 'Treshold -- batches', plotnames = 'ABCD', colors = 0)\n",
+    "        # fig = scalp.plot4_2x2(stax, label = 'batch', headline = 'Treshold -- batches', plotnames = 'ABCD', colors = 0)\n",
+    "        fig = scalp.plot4_2x2(stax, headline = 'Threshold -- Labels', plotnames = 'ABCD', mode = 'batch', n=0)\n",
     "        fig.savefig(figpath+'threshExBatch', dpi=300,bbox_inches='tight')\n",
     "\n",
     "\n",
@@ -218,14 +229,6 @@
     "            scalp.plot(stack,'scalp', color=['batch','label'])\n",
     "            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75762955-d555-4e61-a200-76aae1437035",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -348,7 +351,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets[19].uns['name']"
+    "datasets[19].uns['name']\n",
+    "\n",
+    "assert False"
    ]
   },
   {
